--- a/style.css
+++ b/style.css
@@ -1,23 +1,61 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: linear-gradient(#43C6DB, #FFFDD0);
+* {
+    box-sizing: border-box;
     font-family: 'Bungee', cursive;
 }
 
-h1{
+body {
+    background: linear-gradient(#43C6D1, #FFFDD0);
+}
+
+h1 {
     margin-top: 0px;
     margin-bottom: 0px;
 }
 
 #screen {
     background-color: black;
-    margin-bottom: 51px;
+    margin: auto;
 }
 
 #record-container {
     padding: 10px;
     margin: 0px;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+}
+
+.column {
+  float: left;
+  height: 440px;
+  padding: 20px;
+  padding-top: 10px;
+}
+
+.column.side {
+  width: 413px;
+  text-align: center;
+}
+
+.column.middle {
+  width: 420px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
 }
